Add AdminRoleArn parameter with validation to CloudFormation template
- Introduce AdminRoleArn as an optional parameter
- Implement regex validation for IAM role ARN format
- Pass AdminRoleArn to CodeBuild environment variables

--- a/terraform/cloudformation/main.yaml
+++ b/terraform/cloudformation/main.yaml
@@ -100,6 +100,8 @@ Parameters:
     Type: String
     Description: The ARN of the admin role (optional)
     Default: ""
+    AllowedPattern: "^$|^arn:aws:iam::[0-9]{12}:role/.+$"
+    ConstraintDescription: "Must be a valid IAM role ARN or empty"
 
 Resources:
   CodeBuildProject:
