--- a/terraform/cloudformation/main.yaml
+++ b/terraform/cloudformation/main.yaml
@@ -100,7 +100,7 @@ Parameters:
     Type: String
     Description: The ARN of the admin role (optional)
     Default: ""
-    AllowedPattern: "^$|^arn:aws:iam::[0-9]{12}:role/.+$"
+    AllowedPattern: '^$|^arn:aws:([a-zA-Z0-9\-]+):([a-z0-9\-]+)?:([0-9]{12})?:(.+)$'
     ConstraintDescription: "Must be a valid IAM role ARN or empty"
 
 Resources:
