Adding required iam:CreatePolicyVersion policy for CodeBuild

--- a/terraform/cloudformation/main.yaml
+++ b/terraform/cloudformation/main.yaml
@@ -509,6 +509,7 @@ Resources:
                   - iam:GetOpenIDConnectProvider
                   - iam:DeleteOpenIDConnectProvider
                   - iam:UpdateAssumeRolePolicy
+                  - iam:CreatePolicyVersion
                 Resource: "*"
               - Effect: Allow
                 Action:
