Fine-tuned arm64-based EC2 instance support for running SuperTuxKart example.

--- a/integration/director/director.yaml
+++ b/integration/director/director.yaml
@@ -121,6 +121,10 @@ spec:
                   operator: In
                   values:
                   - amd64
+                - key: openmatch
+                  operator: In
+                  values:
+                  - customization
       volumes:
       - configMap:
           defaultMode: 420
