--- a/integration/matchfunction/matchfunction.yaml
+++ b/integration/matchfunction/matchfunction.yaml
@@ -77,6 +77,10 @@ spec:
                   operator: In
                   values:
                   - amd64
+                - key: openmatch
+                  operator: In
+                  values:
+                  - customization
       volumes:
       - secret:
           defaultMode: 420
