Adding newly required permission globalaccelerator:ListCrossAccountResources

--- a/terraform/cloudformation/main.yaml
+++ b/terraform/cloudformation/main.yaml
@@ -455,6 +455,7 @@ Resources:
                   - globalaccelerator:ListCustomRoutingTraffic
                   - globalaccelerator:DescribeCustomRoutingTraffic
                   - globalaccelerator:UpdateCustomRoutingTraffic
+                  - globalaccelerator:ListCrossAccountResources
                 Resource: "*"
               - Effect: Allow
                 Action:
