Updating deprecated short version of kubectl command that checks version

--- a/terraform/cloudformation/buildspec.yml
+++ b/terraform/cloudformation/buildspec.yml
@@ -35,7 +35,7 @@ phases:
       - chmod +x ./kubectl
       - mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
       - echo 'export PATH=$PATH:$HOME/bin' >> ~/.bashrc
-      - kubectl version --short --client
+      - kubectl version --client -o short
 
       - echo "Checking Docker version..."
       - docker version
