Adding EKS DescribeClusterVersions permission to the CodeBuild service role

--- a/terraform/cloudformation/main.yaml
+++ b/terraform/cloudformation/main.yaml
@@ -451,6 +451,7 @@ Resources:
                   - eks:ListUpdates
                   - eks:DescribeUpdate
                   - eks:AccessKubernetesApi
+                  - eks:DescribeClusterVersions
                 Resource: "*"
               - Effect: Allow
                 Action:
